# Note: cdksettings.c gets included from xsettings-client.c, do not add here
cdk_x11_sources = files(
  'cdkapplaunchcontext-x11.c',
  'cdkasync.c',
  'cdkcursor-x11.c',
  'cdkdevice-core-x11.c',
  'cdkdevice-xi2.c',
  'cdkdevicemanager-core-x11.c',
  'cdkdevicemanager-x11.c',
  'cdkdevicemanager-xi2.c',
  'cdkdisplaymanager-x11.c',
  'cdkdisplay-x11.c',
  'cdkdnd-x11.c',
  'cdkeventsource.c',
  'cdkeventtranslator.c',
  'cdkgeometry-x11.c',
  'cdkglcontext-x11.c',
  'cdkkeys-x11.c',
  'cdkmain-x11.c',
  'cdkproperty-x11.c',
  'cdkscreen-x11.c',
  'cdkselection-x11.c',
  'cdktestutils-x11.c',
  'cdkvisual-x11.c',
  'cdkwindow-x11.c',
  'cdkxftdefaults.c',
  'cdkxid.c',
  'xsettings-client.c',
  'cdkmonitor-x11.c',
)

cdk_x11_public_headers = files(
  'cdkx-autocleanups.h',
  'cdkx11applaunchcontext.h',
  'cdkx11cursor.h',
  'cdkx11device.h',
  'cdkx11device-core.h',
  'cdkx11device-xi2.h',
  'cdkx11devicemanager.h',
  'cdkx11devicemanager-core.h',
  'cdkx11devicemanager-xi2.h',
  'cdkx11display.h',
  'cdkx11displaymanager.h',
  'cdkx11dnd.h',
  'cdkx11glcontext.h',
  'cdkx11keys.h',
  'cdkx11monitor.h',
  'cdkx11property.h',
  'cdkx11screen.h',
  'cdkx11selection.h',
  'cdkx11utils.h',
  'cdkx11visual.h',
  'cdkx11window.h',
)

install_headers(cdk_x11_public_headers, subdir: 'ctk-3.0/cdk/x11/')
install_headers('cdkx.h', subdir: 'ctk-3.0/cdk/')

cdk_x11_deps = [
  xrender_dep,
  xi_dep,
  xext_dep,
  x11_dep,
  xcursor_dep,
  xdamage_dep,
  xfixes_dep,
  xcomposite_dep,
  xrandr_dep,
  xinerama_dep,
]

libcdk_x11 = static_library('cdk-x11', cdkmarshal_h,
                            cdk_x11_sources, cdkconfig, cdkenum_h,
                            include_directories: [ confinc, cdkinc, ],
                            c_args: [
                              '-DGDK_COMPILATION',
                              '-DG_LOG_DOMAIN="Cdk"',
                            ] + common_cflags,
                            link_args: common_ldflags,
                            dependencies: [ cdk_deps, cdk_x11_deps, ])
