a11y_sources = files(
  'ctkaccessibility.c',
  'ctkaccessibilitymisc.c',
  'ctkaccessibilityutil.c',
  'ctkarrowaccessible.c',
  'ctkbooleancellaccessible.c',
  'ctkbuttonaccessible.c',
  'ctkcellaccessible.c',
  'ctkcellaccessibleparent.c',
  'ctkcheckmenuitemaccessible.c',
  'ctkcolorswatchaccessible.c',
  'ctkcomboboxaccessible.c',
  'ctkcontaineraccessible.c',
  'ctkcontainercellaccessible.c',
  'ctkentryaccessible.c',
  'ctkexpanderaccessible.c',
  'ctkflowboxaccessible.c',
  'ctkflowboxchildaccessible.c',
  'ctkframeaccessible.c',
  'ctkheaderbaraccessible.c',
  'ctkiconviewaccessible.c',
  'ctkimageaccessible.c',
  'ctkimagecellaccessible.c',
  'ctklabelaccessible.c',
  'ctklevelbaraccessible.c',
  'ctklinkbuttonaccessible.c',
  'ctklistboxaccessible.c',
  'ctklistboxrowaccessible.c',
  'ctklockbuttonaccessible.c',
  'ctkmenuaccessible.c',
  'ctkmenubuttonaccessible.c',
  'ctkmenushellaccessible.c',
  'ctkmenuitemaccessible.c',
  'ctknotebookaccessible.c',
  'ctknotebookpageaccessible.c',
  'ctkpanedaccessible.c',
  'ctkplugaccessible.c',
  'ctkpopoveraccessible.c',
  'ctkprogressbaraccessible.c',
  'ctkradiobuttonaccessible.c',
  'ctkradiomenuitemaccessible.c',
  'ctkrangeaccessible.c',
  'ctkrenderercellaccessible.c',
  'ctkscaleaccessible.c',
  'ctkscalebuttonaccessible.c',
  'ctkscrolledwindowaccessible.c',
  'ctksocketaccessible.c',
  'ctkspinbuttonaccessible.c',
  'ctkspinneraccessible.c',
  'ctkstatusbaraccessible.c',
  'ctkstackaccessible.c',
  'ctkswitchaccessible.c',
  'ctktextcellaccessible.c',
  'ctktextviewaccessible.c',
  'ctktogglebuttonaccessible.c',
  'ctktoplevelaccessible.c',
  'ctktreeviewaccessible.c',
  'ctkwidgetaccessible.c',
  'ctkwindowaccessible.c',
)

a11y_headers = files(
  'ctk-a11y-autocleanups.h',
  'ctkarrowaccessible.h',
  'ctkbooleancellaccessible.h',
  'ctkbuttonaccessible.h',
  'ctkcellaccessible.h',
  'ctkcellaccessibleparent.h',
  'ctkcheckmenuitemaccessible.h',
  'ctkcomboboxaccessible.h',
  'ctkcontaineraccessible.h',
  'ctkcontainercellaccessible.h',
  'ctkentryaccessible.h',
  'ctkexpanderaccessible.h',
  'ctkflowboxaccessible.h',
  'ctkflowboxchildaccessible.h',
  'ctkframeaccessible.h',
  'ctkheaderbaraccessible.h',
  'ctkiconviewaccessible.h',
  'ctkimageaccessible.h',
  'ctkimagecellaccessible.h',
  'ctklabelaccessible.h',
  'ctklevelbaraccessible.h',
  'ctklinkbuttonaccessible.h',
  'ctklistboxaccessible.h',
  'ctklistboxrowaccessible.h',
  'ctklockbuttonaccessible.h',
  'ctkmenuaccessible.h',
  'ctkmenubuttonaccessible.h',
  'ctkmenuitemaccessible.h',
  'ctkmenushellaccessible.h',
  'ctknotebookaccessible.h',
  'ctknotebookpageaccessible.h',
  'ctkpanedaccessible.h',
  'ctkplugaccessible.h',
  'ctkpopoveraccessible.h',
  'ctkprogressbaraccessible.h',
  'ctkradiobuttonaccessible.h',
  'ctkradiomenuitemaccessible.h',
  'ctkrangeaccessible.h',
  'ctkrenderercellaccessible.h',
  'ctkscaleaccessible.h',
  'ctkscalebuttonaccessible.h',
  'ctkscrolledwindowaccessible.h',
  'ctksocketaccessible.h',
  'ctkspinbuttonaccessible.h',
  'ctkspinneraccessible.h',
  'ctkstatusbaraccessible.h',
  'ctkstackaccessible.h',
  'ctkswitchaccessible.h',
  'ctktextcellaccessible.h',
  'ctktextviewaccessible.h',
  'ctktogglebuttonaccessible.h',
  'ctktoplevelaccessible.h',
  'ctktreeviewaccessible.h',
  'ctkwidgetaccessible.h',
  'ctkwindowaccessible.h',
)

install_headers(a11y_headers, subdir : 'ctk-3.0/ctk/a11y')
