ctk_deprecated_sources = files(
  'ctkactivatable.c',
  'ctkaction.c',
  'ctkactiongroup.c',
  'ctkalignment.c',
  'ctkarrow.c',
  'ctkcolorsel.c',
  'ctkcolorseldialog.c',
  'ctkfontsel.c',
  'ctkgradient.c',
  'ctkhandlebox.c',
  'ctkhbbox.c',
  'ctkhbox.c',
  'ctkhpaned.c',
  'ctkhscale.c',
  'ctkhscrollbar.c',
  'ctkhseparator.c',
  'ctkhsv.c',
  'ctkiconfactory.c',
  'ctkimagemenuitem.c',
  'ctkmisc.c',
  'ctknumerableicon.c',
  'ctkradioaction.c',
  'ctkrc.c',
  'ctkrecentaction.c',
  'ctkstatusicon.c',
  'ctkstock.c',
  'ctkstyle.c',
  'ctkstyleproperties.c',
  'ctksymboliccolor.c',
  'ctktable.c',
  'ctktearoffmenuitem.c',
  'ctkthemingengine.c',
  'ctktoggleaction.c',
  'ctkuimanager.c',
  'ctkvbbox.c',
  'ctkvbox.c',
  'ctkvscale.c',
  'ctkvscrollbar.c',
  'ctkvseparator.c',
  'ctkvpaned.c',
)

ctk_deprecated_headers = files(
  'ctkactivatable.h',
  'ctkaction.h',
  'ctkactiongroup.h',
  'ctkalignment.h',
  'ctkarrow.h',
  'ctkcolorsel.h',
  'ctkcolorseldialog.h',
  'ctkfontsel.h',
  'ctkgradient.h',
  'ctkhandlebox.h',
  'ctkhbbox.h',
  'ctkhbox.h',
  'ctkhpaned.h',
  'ctkhscale.h',
  'ctkhscrollbar.h',
  'ctkhseparator.h',
  'ctkhsv.h',
  'ctkiconfactory.h',
  'ctkimagemenuitem.h',
  'ctkmisc.h',
  'ctknumerableicon.h',
  'ctkradioaction.h',
  'ctkrc.h',
  'ctkrecentaction.h',
  'ctkstatusicon.h',
  'ctkstock.h',
  'ctkstyle.h',
  'ctkstyleproperties.h',
  'ctksymboliccolor.h',
  'ctktable.h',
  'ctktearoffmenuitem.h',
  'ctkthemingengine.h',
  'ctktoggleaction.h',
  'ctkuimanager.h',
  'ctkvbbox.h',
  'ctkvbox.h',
  'ctkvscale.h',
  'ctkvscrollbar.h',
  'ctkvseparator.h',
  'ctkvpaned.h',
)

install_headers(ctk_deprecated_headers, subdir: 'ctk-3.0/ctk/deprecated/')
