ctk_deprecated_sources = files(
  'ctkactivatable.c',
  'ctkalignment.c',
  'ctkarrow.c',
  'ctkcolorsel.c',
  'ctkcolorseldialog.c',
  'ctkfontsel.c',
  'ctkgradient.c',
  'ctkhandlebox.c',
  'ctkhbbox.c',
  'ctkhbox.c',
  'ctkhpaned.c',
  'ctkhscale.c',
  'ctkhscrollbar.c',
  'ctkhseparator.c',
  'ctkhsv.c',
  'ctkimagemenuitem.c',
  'ctkmisc.c',
  'ctknumerableicon.c',
  'ctkrecentaction.c',
  'ctkstatusicon.c',
  'ctkstyleproperties.c',
  'ctksymboliccolor.c',
  'ctktable.c',
  'ctktearoffmenuitem.c',
  'ctkthemingengine.c',
  'ctkuimanager.c',
  'ctkvbbox.c',
  'ctkvbox.c',
  'ctkvscale.c',
  'ctkvscrollbar.c',
  'ctkvseparator.c',
  'ctkvpaned.c',
)

ctk_deprecated_headers = files(
  'ctkactivatable.h',
  'ctkalignment.h',
  'ctkarrow.h',
  'ctkcolorsel.h',
  'ctkcolorseldialog.h',
  'ctkfontsel.h',
  'ctkgradient.h',
  'ctkhandlebox.h',
  'ctkhbbox.h',
  'ctkhbox.h',
  'ctkhpaned.h',
  'ctkhscale.h',
  'ctkhscrollbar.h',
  'ctkhseparator.h',
  'ctkhsv.h',
  'ctkimagemenuitem.h',
  'ctkmisc.h',
  'ctknumerableicon.h',
  'ctkrecentaction.h',
  'ctkstatusicon.h',
  'ctkstyleproperties.h',
  'ctksymboliccolor.h',
  'ctktable.h',
  'ctktearoffmenuitem.h',
  'ctkthemingengine.h',
  'ctkuimanager.h',
  'ctkvbbox.h',
  'ctkvbox.h',
  'ctkvscale.h',
  'ctkvscrollbar.h',
  'ctkvseparator.h',
  'ctkvpaned.h',
)

install_headers(ctk_deprecated_headers, subdir: 'ctk-3.0/ctk/deprecated/')
