ctk_deprecated_sources = files(
  'ctkalignment.c',
  'ctkarrow.c',
  'ctkcolorsel.c',
  'ctkcolorseldialog.c',
  'ctkfontsel.c',
  'ctkgradient.c',
  'ctkhandlebox.c',
  'ctkhbbox.c',
  'ctkhbox.c',
  'ctkhpaned.c',
  'ctkhscale.c',
  'ctkhscrollbar.c',
  'ctkhseparator.c',
  'ctkhsv.c',
  'ctkmisc.c',
  'ctknumerableicon.c',
  'ctkrecentaction.c',
  'ctkstatusicon.c',
  'ctkstyleproperties.c',
  'ctksymboliccolor.c',
  'ctktable.c',
  'ctkthemingengine.c',
  'ctkuimanager.c',
  'ctkvbbox.c',
  'ctkvbox.c',
  'ctkvscale.c',
  'ctkvscrollbar.c',
  'ctkvseparator.c',
  'ctkvpaned.c',
)

ctk_deprecated_headers = files(
  'ctkalignment.h',
  'ctkarrow.h',
  'ctkcolorsel.h',
  'ctkcolorseldialog.h',
  'ctkfontsel.h',
  'ctkgradient.h',
  'ctkhandlebox.h',
  'ctkhbbox.h',
  'ctkhbox.h',
  'ctkhpaned.h',
  'ctkhscale.h',
  'ctkhscrollbar.h',
  'ctkhseparator.h',
  'ctkhsv.h',
  'ctkmisc.h',
  'ctknumerableicon.h',
  'ctkrecentaction.h',
  'ctkstatusicon.h',
  'ctkstyleproperties.h',
  'ctksymboliccolor.h',
  'ctktable.h',
  'ctkthemingengine.h',
  'ctkuimanager.h',
  'ctkvbbox.h',
  'ctkvbox.h',
  'ctkvscale.h',
  'ctkvscrollbar.h',
  'ctkvseparator.h',
  'ctkvpaned.h',
)

install_headers(ctk_deprecated_headers, subdir: 'ctk-3.0/ctk/deprecated/')
